<resources>
    <string name="app_name">智能科学与工程学院研究生招生</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_supervisor">导师</string>
    <string name="supervisor_detail">导师介绍</string>
    <string name="menu_profession">专业</string>
    <string name="profession_detail">专业介绍</string>
    <string name="menu_college">学院</string>
    <string name="menu_my">我的</string>
    <string-array name="my_options">
        <item>收藏的人</item>
        <item>查询进度</item>
        <item>管理员登录</item>
        <!-- 这里添加更多的功能列表项 -->
    </string-array>
...
    <string name="telephone">电话：</string>
    <string name="email">邮箱：</string>
    <string name="profession_name">专业名字</string>
    <string name="profession_intro">专业简介</string>
    <string name="profession_courses">专业课程</string>
    <string name="profession_requirements">申请要求</string>
    <string name="add_profession">Add Profession</string>
    <string name="edit_profession">Edit Profession</string>
    <string name="add">添加</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="profession_added">Profession added</string>
    <string name="profession_updated">Profession updated</string>
    <string-array name="image_names">
        <item>Biology</item>
...
